fixed overlay display visibility
and center overlay content

--- a/src/main/resources/css/jeopardy.css
+++ b/src/main/resources/css/jeopardy.css
@@ -26,7 +26,15 @@
 }
 
 #overlay {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
+    background: #000;
+}
+
+#overlay * {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
 }
